got rid of the upgrade all task as it was taking a huge amount of time

--- a/src/examples/hadoop/requirements.txt
+++ b/src/examples/hadoop/requirements.txt
@@ -1,4 +1,4 @@
-# Cython==0.25.2
+# Cython==0.25.2 must be installed before this requirements process is run!
 Kivy>=1.10.0
 Kivy-Garden>=0.1.4
 matplotlib>=2.2.2
