Ugh, fixed a bunch of little things: - named python3 explicitly in test code since Ubuntu isn't shipping with Python 2 any more - changed how octal constants are written in test code in accordance with Python3 - fixed a requirements dependency for Faker in the base reqs file - Fixed the seeding method for faker in a test prog - Fixed (I thought I already did this) how you identify a single node in a NetworkX DiGraph - Found one more place where you get bytes but need to decode() them into a string - added comments on the hadoop demo reqs file about how to configure for Kivy

--- a/src/examples/hadoop/requirements.txt
+++ b/src/examples/hadoop/requirements.txt
@@ -1,4 +1,9 @@
 # Cython==0.25.2 must be installed before this requirements process is run!
+#
+# on linux, also install (via the package manager):
+#  graphviz
+#  libgraphviz-dev
+#
 Kivy>=1.10.0
 Kivy-Garden>=0.1.4
 matplotlib>=2.2.2
